# nrlmsis-2_1

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: CPM.cmake  dependencies.cmake
docs/: DESIGN.md  NUMERICS.md  PORTING_NOTES.md
examples/: msis_benchmark_cli.cpp  msis_cli.cpp  msis_profile_cli.cpp  plot_msis_profile.py
include/msis21/: model.hpp  msis21.hpp  options.hpp  status.hpp  types.hpp
include/msis21/detail/: calc.hpp  constants.hpp  dfn.hpp  fortran_backend.hpp  fortran_unformatted_reader.hpp  gfn.hpp  gtd8d.hpp  log.hpp  parm_reader.hpp  tfn.hpp  utils.hpp
src/: calc.cpp  dfn.cpp  fortran_alt2gph.F90  fortran_backend.cpp  fortran_bridge.F90  fortran_msiscalc_bridge.F90  fortran_unformatted_reader.cpp  gfn.cpp  gtd8d.cpp  log.cpp  model.cpp  msis21.cpp  parm_reader.cpp  tfn.cpp  utils.cpp
tests/: CMakeLists.txt  test_calc.cpp  test_dfn.cpp  test_fortran_reader.cpp  test_gfn.cpp  test_gfn_nonlinear.cpp  test_golden_vectors.cpp  test_gtd8d.cpp  test_invariants.cpp  test_parm_reader.cpp  test_paths.hpp  test_smoke.cpp  test_tfn.cpp  test_utils.cpp
tools/: compare_fortran_parity.sh  reset_ninja_state.sh
